[package]
name = "stm-html"
version = "0.1.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.4", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
log = "0.4"
lambda = { path = "/home/ubuntu/rust/aws-lambda-rust-runtime/lambda" }
lambda_http = { path = "/home/ubuntu/rust/aws-lambda-rust-runtime/lambda-http" }
rusoto_sqs = { version = "0.45", features = ["rustls"], default-features = false }
rusoto_core = { version = "0.45", features = ["rustls"], default-features = false }
elasticsearch = { version = "7.8.1-alpha.1", features = ["rustls-tls"], default-features = false }