[package]
name = "stm-html"
version = "0.1.0"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false, features = ["builtins"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.4", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
log = "0.4"
lambda = { git = "https://github.com/rimutaka/aws-lambda-rust-runtime", branch = "proxy-experiment" }
hyper = "0.13"
hyper-rustls = "0.21"
rusoto_signature = "0.45"
regex = "1.3"
rust-embed = { version = "5.9", features = ["compression"] }
rusoto_sqs = { version = "0.45", features = ["rustls"], default-features = false }
rusoto_core = { version = "0.45", features = ["rustls"], default-features = false }
futures = "0.3"
urlencoding = "1.1"